Fixed spacing in middle and made header fixed.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,18 +7,34 @@ html {
     opacity: 0.9;
 }
 
+h4 {
+    margin-top: 10px;
+    padding-bottom: 5px;
+}
+
+/* with out the body margin set to 0, I was getting a small area above the header where the 
+content showed through as it was scrolled */
+
+body {
+    margin: 0;
+}
+
 /* Header and items within the header */
 header {
     display: flex;
+    position: fixed;
+    width: 100%;
+    height: 69px;
     border-bottom: 1px solid seashell;
     justify-content: space-between;
     align-items: center;
-    height: 69px;
+    z-index: 1;
+    background-color: black;
 }
 
 header img {
     height: 50px;
-    padding: 10px;
+    margin: 10px;
 
 }
 
@@ -26,13 +42,11 @@ nav {
     display: flex;
     text-decoration: underline;
     width: 400px;
-    justify-content: space-between;
-    padding: 5px;
+    justify-content: space-around;
+    margin: 5px;
 }
 
-h4 {
-    margin-top: 10px;
-}
+
 
 /* Content of the screen */
 
@@ -41,6 +55,8 @@ h4 {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    padding-top: 69px;
+
 }
 /* Mission */
 
@@ -53,13 +69,12 @@ h4 {
     background-image: url(../img-mission-background.jpg);
     height:700px;
     width: 1200px;
-    text-align: center;
 }
 
 .mission-text {
     background-color: black;
     position: relative;
-    top: 45%;
+    top: 300px;
 
 }
 /* Teas of the month */
@@ -72,6 +87,7 @@ h4 {
 .teaofthemonth-block img {
     height: 200px;
     width: 300px;
+    margin: 15px;
 }
 
 .teaofthemonth {
@@ -83,7 +99,7 @@ h4 {
 .teas {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
  
 }
@@ -98,12 +114,13 @@ h4 {
 
 .all-locations {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .location {
     width: 300px;
     opacity: 1;
+    margin: 20px;
     background-color: black;
 }
 
@@ -115,13 +132,17 @@ footer p {
     padding-left: 20px;
 }
 
-/* debugging
+/* debugging - useful to see the boxes on the page
 div {
     border: 1px solid red;
 }
 
 footer {
     border: 1px solid green;
+}
+
+header {
+    border: 1px solid blue;
 }
 
 */
